--- a/src/app/pages/invoices/invoices.component.html
+++ b/src/app/pages/invoices/invoices.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <h2 class="mb-4 text-center">Consulta de Facturas</h2>
 
-  <form (ngSubmit)="buscar()" class="row g-3 align-items-end mb-4">
+  <form (ngSubmit)="buscar(true)" class="row g-3 align-items-end mb-4">
     <div class="col-md-4">
       <label for="inicio" class="form-label">Desde:</label>
       <input id="inicio" type="date" [(ngModel)]="fechaInicio" name="fechaInicio" class="form-control" required />
@@ -37,5 +37,22 @@
         </tr>
       </tbody>
     </table>
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        <li class="page-item" [class.disabled]="p === 1">
+          <button class="page-link" (click)="cambiarPagina(p - 1)" [disabled]="p === 1">Anterior</button>
+        </li>
+
+        <li class="page-item disabled">
+          <span class="page-link">
+            Página {{ p }} de {{ totalPages }}
+          </span>
+        </li>
+
+        <li class="page-item" [class.disabled]="p === totalPages">
+          <button class="page-link" (click)="cambiarPagina(p + 1)" [disabled]="p === totalPages">Siguiente</button>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
