--- a/src/app/pages/invoices/invoices.component.html
+++ b/src/app/pages/invoices/invoices.component.html
@@ -17,6 +17,14 @@
     </div>
   </form>
 
+  <div *ngIf="isLoading" class="alert alert-info">
+    Cargando...
+  </div>
+
+  <div *ngIf="!isLoading && resultado.length === 0" class="alert alert-warning">
+    No se encontraron resultados.
+  </div>
+
   <div *ngIf="resultado.length > 0" class="table-responsive">
     <h3 class="mb-3">Resultados</h3>
     <table class="table table-bordered table-striped table-hover">
@@ -37,6 +45,7 @@
         </tr>
       </tbody>
     </table>
+
     <nav aria-label="Page navigation">
       <ul class="pagination justify-content-center">
         <li class="page-item" [class.disabled]="p === 1">
